# Bluefairy

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  requirements.txt
bluefairyGUI/: analysis.py  cli.py  database.py  delete_all.py  evaluate.py  game_review.py  main.py  openings.py  parser.py  qtapp.py  scraper.py  test.py  test2.py  whale.py
bluefairyGUI/static/: frontend.js
bluefairyGUI/templates/: index.html
gui/: analysis.py  app.py  cli.py  database.py  game_manager.py  game_review.py  whale.py
gui/bluefairy/: package-lock.json  package.json
gui/bluefairy/src/: App.css  App.js  AppRouter.js  Game.js  ParentComponent.js  index.js
gui/bluefairy/src/components/: EvaluationBar.js  FairyBoard.js  GameLibraryTab.js  MenuBar.js  MoveHistory.js  ProfileCard.js  ProfilesPage.js  SideMenu.js
gui/static/: frontend.js
gui/templates/: index.html
models/: lstm_layer.rs
src/: bchess.rs  encode.rs  evaluator.rs  lib.rs  main.rs  reader.rs  utilities.rs
src/engine/: evaluate.rs  evaluator.rs  game.rs  move.rs
tests/: board_encoding.rs
