[package]
name = "Bluefairy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.4"
serde = "1.0"
serde_json = "1.0.108"
serde_derive = "1.0"
rayon = "1.5.1"
mcts = "0.2"
csv = "1.3.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-linalg = "0.16.0"
log = "0.4.20"
env_logger = "0.10.0"
chess = "3.2.0"

[dev-dependencies]
criterion = "0.3"